--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=7cd899fe-2153-4ed8-a223-9efe88b39830" type="text/javascript"></script>
 
     <title>React App</title>
   </head>
